src/Contact.css
.contact-page-container {
    display: flex;
    flex-direction: column;
    width: 90%;
    height: 70%;
    margin: 0 5%;
    align-items: center;
    position: relative;
    top: 10vh;
    background-image: url("./contact.png");
    background-position: center;
      background-repeat: no-repeat;
    background-size: cover;
    min-width: 300px;
 
}

.contact-form-container {
    /* position: relative;
    top: 5vh; */
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    height: 90%;
    width: 50%;
    /* margin-top: 5%; */
    margin: 5% 25%;
    min-width: 270px;
    /* background-color: tomato; */
     background-color: rgb(52,85,69);
   
  

}

.contact-form {
    display:flex;
    flex-direction: column;
    align-items: center;
    /* justify-content: space-evenly; */
    width: 90%;
    height: 90%;
    margin: 2%;
    gap: 1%;

    
}

.contact-names {
    display: flex;
    align-items: center;
    width: 100%;
    height: 15%;
    gap: 1%;

}
.contact-email {
    display: flex;
    align-items: center;
    width: 100%;
    height: 15%;
    gap: 1%;
   

}

.contact-number-company {
    display: flex;
    align-items: center;
    width: 100%;
    height: 15%;
    gap: 1%;

}

.contact-send {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    height: 10%;
    margin: 5% 30%;
    gap: 5%;
}

.contact-send button {
    width: 90%;
    height: 100%;
    background-color: rgb(176 ,191, 184);
    color: white;
    border: none;
    border-radius: 30px;
    text-transform: capitalize;
    font-size: 26px;
    font-family: 'Red Hat Display', sans-serif;
    outline: none;
}

.contact-input-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    width: 100%;
    height: 100%;
    gap: 1%;
    margin: 1%;
    
    /* background-color: turquoise; */
}
.contact-input-label {
    display: flex;
    align-items: center;
    /* justify-content: center; */
    height: 20%;
    width: 100%;
    text-align: left;
    font-size: 12px;
    font-style: italic;
    font-family: 'Red Hat Display', sans-serif;
    /* background-color: burlywood; */
}
.contact-input {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 40%;

    
}
.contact-input input {
    height: 100%;
    width: 100%;
    outline: none;
    border-radius: 5px;
    border: none;
    font-family: 'Red Hat Display', sans-serif;
    padding: 1px 2px;
    /* background-color: yellowgreen; */

}

.contact-input-error {
    display: flex;
    align-items: center;
    /* justify-content: center; */
    width: 100%;
    height: 20%;
    text-align: left;
/* background-color: red; */
    font-size: 12px;
    font-style: italic;
    font-family: 'Red Hat Display', sans-serif;
    color: red;
    /* background-color: chocolate; */
}

.contact-message {
    width: 100%;
    height: 40%;
    
}
.contact-text-area-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    width: 95%;
    height: 100%;
    gap: 1%;
    margin: 1%;
    /* background-color: turquoise; */
}

.contact-text-area {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 70%;
   
    /* background-color: yellowgreen; */
}

.contact-text-area textarea {
    height: 100%;
    width: 100%;
    outline: none;
    border-radius: 5px;
    font-family: 'Red Hat Display', sans-serif;
    padding: 2px;
    text-transform: capitalize;
}

.contact-text-area-error {
    display: flex;
    align-items: center;
    /* justify-content: center; */
    width: 100%;
    height: 20%;
    font-size: 12px;
    font-style: italic;
    font-family: 'Red Hat Display', sans-serif;
    color: red;
/* background-color: red; */
}

input {
    text-transform: capitalize;
}

.contact-email input {
    text-transform: lowercase;
}

.contact-page-heading{
  display: flex;
  position: relative;
  top: 5vh;
  /* height: 15vh; */
  align-items: center;
  justify-content: center;
  color: white;
     font-family: 'Red Hat Display', sans-serif;
  /* background-color: black; */
  /* height: 100%; */
  font-size: 36px;
  font-weight: bold;
}

.contact-recapture  {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 15%;

}



iframe {
    transform: scale(.7) ;

}


@media screen and (max-width:800px) and (orientation:portrait) {
.contact-form-container {
    /* background-color: blueviolet; */
}
.contact-names, .contact-number-company { 
    flex-direction: column;
    /* gap: 1%; */
    height: 22%;
    /* gap: 1%; */
}
.contact-email, .contact-send {
    height: 10%;
    flex-direction: column;
    /* gap: 1%; */
    width: 100%;
}
.contact-form input{
    /* gap: 1%; */
}

.contact {
    height: 175vh;
}
.contact-page-container {
    top: -5vh;
}

.contact-message {
    height: 20%;
}

.contact-page-heading {
    top: -5vh;
}
.contact-text-area-container { 
    width: 100%;
    margin: 0;
}

}


.center-email-status {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    justify-content: center;
    /* color: black; */
    height: 70vh;

}
.contact-email-status {
    display:flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width:100%;
}
@media screen and (max-width:850px)  and (orientation: landscape) {
.contact {
    height: 100vw;
}
.contact-form-container {
    /* background-color: cyan; */
  
    width: 75vw;
}

}

@media screen and (min-height:1000px)  and (orientation: portrait) {
.contact {
    height: 150vh;
    justify-content: flex-start;
}
.contact-form-container {
    /* background-color: cyan; */
    
    width: 75vw;

}
.contact-page-heading {
   top: 15vh;
    
}
.contact-page-container {
    justify-content: flex-start;
    top: 20vh;
    height: 90vh;
}
.contact-send {
    flex-direction: row;
}

}

